--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.10",
     "dotenv": "^10.0.0",
     "redux-devtools": "^3.7.0",
     "tslint": "^6.1.3",
