--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "doc": "react-doc-generator ./src/ -o DOCUMENTATION.md"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +53,7 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.10",
     "dotenv": "^10.0.0",
+    "react-doc-generator": "^1.2.5",
     "redux-devtools": "^3.7.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
